# JARVIS

./: .gitignore  README.md  _legacy_main.py  _legacy_tools.py  agents.py  apis.py  automation.py  brain.py  briefing.py  clipboard_intel.py  dev_agent.py  git_tools.py  guard.py  gui.py  hotkey.py  intelligence.py  knowledge.py  main.py  media.py  network.py  obsidian.py  organizer.py  productivity.py  pyproject.toml  requirements-gui.txt  requirements-ocr.txt  requirements-system.txt  requirements-voice.txt  requirements.txt  scraper.py  test_pyside.py  tools.py  voice.py  windows.py
.jarvis/: imports_replacement.txt  specs_replacement.txt
aaris/: __init__.py  cli.py  config.py  engine.py  http_server.py  logging.py  prompts.py  tool_selector.py  tools_registry.py  undo_redo.py  workspace_defaults.py
aaris/tools/: __init__.py  agents.py  ast_tools.py  core.py  docker.py  filesystem.py  project.py  search.py  sqlite.py  system.py
jarvis/: __init__.py  cli.py  config.py  engine.py  http_server.py  logging.py  prompts.py  tool_selector.py  tools_registry.py  undo_redo.py
jarvis/tools/: __init__.py  agents.py  ast_tools.py  core.py  docker.py  filesystem.py  project.py  search.py  sqlite.py  system.py
tests/: test_advanced_features.py  test_apis.py  test_automation.py  test_briefing.py  test_http_server.py  test_intelligence.py  test_new_features.py  test_productivity.py  test_system_prompt.py  test_tool_selection.py  test_tools_basic.py  test_workspace_defaults.py
