[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aaris-local"
version = "0.1.0"
description = "Asistente local tipo A.A.R.I.S. con Ollama, tools, CLI y GUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ollama==0.6.1",
  "rich==14.3.3",
  "requests>=2.31.0",
  "psutil>=5.9.0",
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.5.0"]
voice = ["speechrecognition>=3.10.0", "pyttsx3>=2.90", "faster-whisper>=1.0.0"]
ocr = ["mss>=9.0.1", "Pillow>=10.0.0", "pytesseract>=0.3.10", "PyPDF2>=3.0.0", "python-docx>=1.1.0"]
system = ["keyboard>=0.13.5"]
web = ["playwright>=1.40.0"]
dev = ["pytest>=8.0.0"]
all = [
  "PySide6>=6.5.0",
  "speechrecognition>=3.10.0",
  "pyttsx3>=2.90",
  "faster-whisper>=1.0.0",
  "mss>=9.0.1",
  "Pillow>=10.0.0",
  "pytesseract>=0.3.10",
  "PyPDF2>=3.0.0",
  "python-docx>=1.1.0",
  "keyboard>=0.13.5",
  "playwright>=1.40.0",
  "pytest>=8.0.0",
]

[project.scripts]
aaris = "aaris.engine:main"
aaris-gui = "gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aaris*"]

[tool.setuptools]
py-modules = [
  "_legacy_tools",
  "apis",
  "automation",
  "brain",
  "briefing",
  "clipboard_intel",
  "dev_agent",
  "git_tools",
  "guard",
  "gui",
  "hotkey",
  "intelligence",
  "knowledge",
  "main",
  "media",
  "network",
  "obsidian",
  "organizer",
  "productivity",
  "scraper",
  "voice",
  "windows",
]
